@@ -40,6 +40,17 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="5.3.10" date="2023-06-18">
+      <description>
+	<p>
+	  Fixes to automation editor.
+	</p>
+	<p>
+	  Fixes to tempo editor.
+	</p>
+      </description>
+    </release>
+
     <release version="5.3.8" date="2023-06-15">
       <description>
 	<p>
