@@ -1,3 +1,9 @@
+ags (5.3.10)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved scrolling of tempo editor
+	* minor improvements
+
 ags (5.3.9)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
